fix: removed horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: flex-start;
